enables preview functionalities